--- a/Hello.html
+++ b/Hello.html
@@ -8,7 +8,7 @@
         font-size: 18pt;
         color: #738561;
         padding: 5px;
-        border: 1px solid #738561;
+        border: 1px solid #000000;
         justify-content: left;
         line-height: 1.5;
         height:85%;
@@ -27,7 +27,7 @@
       }
 
       body{
-          background-color: #ffffff;
+          background-color: #000000;
       }
     </style>
 </head>
